# MocliaMusic

./: CMakeLists.txt  README.md  appveyor.yml  vcpkg-requirements.txt
binary/: conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json
include/: Configure.h  GeneralMessage.h  HttpProcess.h  JsonProcess.h  NeteaseMusicProcess.h
scripts/: build.ps1  build_win64.ps1  build_win86.ps1  helpers.ps1  post_build.ps1  prepare_win64.ps1  prepare_win86.ps1  prepare_x64.ps1
src/: BotConfig.json  Configure.cpp  GeneralMessage.cpp  HttpProcess.cpp  JsonProcess.cpp  NeteaseMusicProcess.cpp  logo.aps  logo.rc  main.cpp
